--- a/payoo-mfs/home.html
+++ b/payoo-mfs/home.html
@@ -16,7 +16,7 @@
 
 </head>
 
-<body class="h-lvh bg-[#f4f5f7]">
+<body class="h-full bg-[#f4f5f7]">
     <header class="bg-white max-w-sm mx-auto rounded-b-2xl">
         <div class="flex justify-between items-center max-w-lg mx-auto border-b-2 border-b-gray-200 p-3">
             <div class="flex justify-center items-center">
@@ -41,39 +41,68 @@
                 </p>
             </div>
             <div class="max-w-lg mx-auto p-5 grid grid-cols-3 gap-4">
-                <div
-                    class="flex flex-col justify-center items-center border-2 border-gray-300 rounded-2xl pt-5 pb-5">
+                <div class="flex flex-col justify-center items-center border-2 border-gray-300 rounded-2xl pt-5 pb-5">
                     <img src="./assets/wallet1.png" alt="">
                     <p class="text-[14px] text-[#080808b3]">Add Money</p>
                 </div>
-                <div
-                    class="flex flex-col justify-center items-center border-2 border-gray-300 rounded-2xl pt-5 pb-5">
+                <div class="flex flex-col justify-center items-center border-2 border-gray-300 rounded-2xl pt-5 pb-5">
                     <img src="./assets/wallet1.png" alt="">
                     <p class="text-[14px] text-[#080808b3]">Cashout</p>
                 </div>
-                <div
-                    class="flex flex-col justify-center items-center border-2 border-gray-300 rounded-2xl pt-5 pb-5">
+                <div class="flex flex-col justify-center items-center border-2 border-gray-300 rounded-2xl pt-5 pb-5">
                     <img src="./assets/wallet1.png" alt="">
                     <p class="text-[14px] text-[#080808b3]">Transfer Money</p>
                 </div>
-                <div
-                    class="flex flex-col justify-center items-center border-2 border-gray-300 rounded-2xl pt-5 pb-5">
+                <div class="flex flex-col justify-center items-center border-2 border-gray-300 rounded-2xl pt-5 pb-5">
                     <img src="./assets/wallet1.png" alt="">
                     <p class="text-[14px] text-[#080808b3]">Get Bonus</p>
                 </div>
-                <div
-                    class="flex flex-col justify-center items-center border-2 border-gray-300 rounded-2xl pt-5 pb-5">
+                <div class="flex flex-col justify-center items-center border-2 border-gray-300 rounded-2xl pt-5 pb-5">
                     <img src="./assets/wallet1.png" alt="">
                     <p class="text-[14px] text-[#080808b3]">Pay Bill</p>
                 </div>
-                <div
-                    class="flex flex-col justify-center items-center border-2 border-gray-300 rounded-2xl pt-5 pb-5">
+                <div class="flex flex-col justify-center items-center border-2 border-gray-300 rounded-2xl pt-5 pb-5">
                     <img src="./assets/wallet1.png" alt="">
                     <p class="text-[14px] text-[#080808b3]">Transactions</p>
                 </div>
             </div>
         </div>
     </header>
+
+    <!-- All Forms start -->
+    <div class="all-forms max-w-sm mx-auto">
+        <h1 class="m-[20px] font-semibold">Add Money</h1>
+        <form action="" class="bg-white rounded-3xl p-5">
+            <div class="">
+                <label for="" class="font-medium">Select a Bank</label>
+                <select class="select rounded-4xl w-full mt-[15px] mb-[20px] bg-[#f4f5f7]">
+                    <option disabled selected>Select Bank</option>
+                    <option>Islami Bank</option>
+                    <option>Shahjalal Bank</option>
+                    <option>Al Arafa Bank</option>
+                    <option>EXIM Bank</option>
+                    <option>Social Islami Bank</option>
+                </select>
+            </div>
+            <div class="">
+                <label for="" class="font-medium">Bank Account Number</label>                
+                <input class="input rounded-4xl w-full mt-[15px] mb-[20px] bg-[#f4f5f7]" type="text" name="" id="" placeholder="Enter 11 Digit Account Number">
+            </div>
+            
+            <div class="">
+                <label for="" class="font-medium">Amount</label>                
+                <input class="input rounded-4xl w-full mt-[15px] mb-[20px] bg-[#f4f5f7]" type="text" name="" id="" placeholder="Enter amount to add">
+            </div>
+            
+            <div class="">
+                <label for="" class="font-medium">PIN Number</label>                
+                <input class="input rounded-4xl w-full mt-[15px] mb-[20px] bg-[#f4f5f7]" type="text" name="" id="" placeholder="Enter 4 Digit PIN">
+            </div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </form>
+    </div>
 
 
 
